# api-crud

./: README.md  database.db  init_bd.py  model.py  pyproject.toml  scrapy.cfg
data/: formations_simplon.csv  formations_site_map.csv
simplon_formation/: items.py  middlewares.py  pipelines.py  settings.py
simplon_formation/spiders/: formations.py  sessions.py
